--- a/BEKHSample-main/backend/src/main/resources/application.properties
+++ b/BEKHSample-main/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=mysql://root:QfuHVgO32WOa9H8X0cnN@containers-us-west-63.railway.app:6046/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/bekh
 spring.datasource.username=root
-spring.datasource.password=QfuHVgO32WOa9H8X0cnN
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
